[package]
name = "concurrent-circbuf"
version = "0.1.0"
authors = ["Jeehoon Kang <jeehoon.kang@sf.snu.ac.kr>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/jeehoonkang/concurrent-circular-buffer"
homepage = "https://github.com/jeehoonkang/concurrent-circular-buffer"
documentation = "https://docs.rs/concurrent-circular-buffer"
description = "Concurrent circular buffer for SPSC and SPMC channels"
keywords = ["circular", "ring", "spsc", "spmc", "channel"]
categories = ["algorithms", "concurrency", "data-structures"]

[dependencies]
crossbeam-epoch = { git = "https://github.com/jeehoonkang/crossbeam.git", branch = "storage" }
crossbeam-utils = "0.6"
memoffset = "0.2"

[dev-dependencies]
rand = "0.5"
